# advent_ai

./: .gitignore  README.md  pyproject.toml
server/: app.py  pyproject.toml
server/tools/: day_01.py  day_02.py
server/tools/utils/: read_input.py
solutions/: day_01.py  day_02.py
solutions/utils/: read_input.py
