[tool.poetry]
name = "advent-ai"
version = "0.1.0"
description = "Chatbot helper for Advent of Code"
authors = ["Cam Crow <19ccrow99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
ruff = "^0.14.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
# Add any additional Black settings here. Using `pyproject.toml` keeps config centralized.
